fix: icons and og-image

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <meta property="og:title" content="2HH2LL - Innovative Trading Method" />
     <meta property="og:description" content="Discover the power of trading with the 2HH2LL method. A unique trading strategy for consistent results in financial markets." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/logo.png" />
+    <meta property="og:image" content="/og-image.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:image" content="/logo.png" />
+    <meta name="twitter:image" content="/og-image.png" />
 
     <!-- Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-M6Z4EY2ZES"></script>
